--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.8.3
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==22.2.0
+banana-dev==4.0.1
 blis==0.7.9
 catalogue==2.0.8
 certifi==2022.12.7
@@ -12,6 +13,7 @@ cymem==2.0.7
 en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.5.0/en_core_web_md-3.5.0-py3-none-any.whl
 Flask==2.2.2
 Flask-Cors==3.0.10
+flask-unittest==0.1.3
 frozenlist==1.3.3
 gunicorn==20.1.0
 idna==3.4
